Changed Dashboard CSS to ensure that bottom graphs do not stretch past a 1.2x1 ratio

--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -225,6 +225,7 @@
   min-width: 0;
   width: 100%;
   height: 60vh;
+  max-height: 30vw;
 }
 
 .grid-border {
@@ -237,6 +238,7 @@
   position:relative;
   height:60vh;
   width: 25vw;
+  max-height: 30vw;
   align-items: center;
 }
 .graph-grid-small {
